# modpack

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS.txt  CLAUDE.md  README.md  amk8323.tmp  cba_settings.sqf  hemtt.toml  mod.cpp  output.txt  sqfc.json
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  enhancement-request.md  feature-request.md  mod-addition.md  mod-removal.md  mod-update.md
.github/workflows/: arma.yml  issues.yml
.hemtt/: base.toml  lints.toml  project.toml
@intercept/addons/: intercept-cba.pbo  intercept_core.pbo
SR11/: README.md
SR11/UKSF/: AUTHORS.txt  README.md  mod.paa  modLarge.paa
SR5/SQF Snippets/: general.sqf  headlessclientSpawn.sqf  mortar.sqf  spawning.sqf
UKSFTemplate.VR/: CfgFunctions.hpp  CfgLoadouts.hpp  README.txt  cba_settings.sqf  description.ext  mission.sqm  postInit.sqf  spawning.hpp  uksf.paa  uksf_gear.sqf
UKSFTemplate.VR/functions/: script_macros.hpp
addons/3rdperson/: $PBOPREFIX$  README.md  XEH_PREP.hpp  XEH_postInit.sqf  config.cpp  force.hpp  script_component.hpp
addons/acr/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgFactionClasses.hpp  CfgGroups.hpp  CfgVehicles.hpp  CfgWeapons.hpp  README.md  config.cpp  script_component.hpp
addons/ai/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgVehicles.hpp  CfgWeapons.hpp  README.md  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/aiQRF/: $PBOPREFIX$  Cfg3den.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  initSettings.sqf  script_component.hpp
addons/aiaircommander/: $PBOPREFIX$  CfgFactionClasses.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/aicommander/: $PBOPREFIX$  CfgFactionClasses.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/aicountermortar/: $PBOPREFIX$  CfgFactionClasses.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  initSettings.sqf  script_component.hpp
addons/aigroundcommander/: $PBOPREFIX$  CfgFactionClasses.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  initSettings.sqf  script_component.hpp
addons/ailogistics/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgFactionClasses.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/air/: $PBOPREFIX$  $PBOPREFIX$.txt  CfgCloudlets.hpp  CfgEventHandlers.hpp  CfgFunctions.hpp  CfgVehicles.hpp  README.md  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/airthreat/: $PBOPREFIX$  CfgFactionClasses.hpp  CfgVehicles.hpp  XEH_PREP.hpp  XEH_postInit.sqf  XEH_preInit.sqf  config.cpp  script_component.hpp
addons/ambientcivilians/: $PBOPREFIX$  CfgVehicles.hpp  README.md  XEH_preInit.sqf  initSettings.sqf  script_component.hpp
addons/apache/: $PBOPREFIX$  CfgEventHandlers.hpp  CfgMoves.hpp  CfgSounds.hpp  CfgVehicles.hpp  MFDApache.hpp  README.md  (+12 more)
dev_harness/: harness_template.sqf  mint_jwt.js  poll.js  submit.js
extension/: Cargo.toml
extension/.cargo/: config.toml
extension/src/: audio.rs  audio_dsp.rs  bridge.rs  commands.rs  config.rs  config_export.rs  dev_run.rs  ffi.rs  file_export.rs  input.rs  lib.rs  listener.rs  loader.rs  sender.rs  status.rs
extension/src/stt/: dsp.rs  frame.rs  mod.rs  pipe.rs  transcribe.rs
extensions/: CMakeLists.txt  uksf.sln  uksf.vcxproj  uksf.vcxproj.filters
extensions/CMakeModules/: cxx_compiler_functions.cmake
extensions/lib/Release/: signalrclient.lib
extensions/poco/lib/: PocoJSONmt.lib
extensions/poco/lib64/: PocoJSONmt.lib
extensions/src/: CMakeLists.txt  common.cpp  common.hpp  main.cpp  signalslot.hpp  singleton.hpp  threaded.hpp  uksf.cpp  uksf.hpp
extensions/src/modules/: common_component.hpp
extensions/src/modules/data/: component.hpp  data.cpp  data.hpp
extensions/src/modules/http/: http.cpp  http.hpp
extensions/src/network/: exception.cpp  router.cpp  router.hpp
extensions/src/network/routeFactories/: IFactory.hpp
extensions/src/uksf/: CMakeLists.txt  common.cpp  common.hpp  main.cpp  singleton.hpp  threaded.hpp  uksf.cpp  uksf.hpp
extensions/src/uksf/Procedures/: Shutdown.h
extensions/src/uksf/Shared/: ClientMessage.cpp  ClientMessage.h  EasyLogging.hpp  IProcedure.h  Lockable.h  Logging.hpp  ProcedureEngine.cpp  ProcedureEngine.h  ServerMessage.cpp  ServerMessage.h  Shared.hpp  SignalSlot.hpp  SignalrClient.cpp  SignalrClient.h  Singleton.hpp  Threaded.hpp
extensions/src/uksf/modules/: SharedComponent.hpp  common_component.hpp
extensions/src/uksf/modules/Common/: Common.cpp  Common.hpp
extensions/src/uksf/modules/Server/: Server.cpp  Server.h
extensions/src/uksf/modules/data/: data.cpp  data.hpp  secret.hpp
extensions/src/uksf/network/: router.cpp
extensions/src/uksf/network/routeFactories/: factory.cpp  serverFactory.hpp  stopFactory.hpp
extensions/src/uksf/network/routeFactories/resources/: server.cpp  server.hpp  stop.cpp  stop.hpp
extensions/uksf/: uksf.vcxproj  uksf.vcxproj.filters
extensions/uksf/src/: common.cpp  common.hpp  json.hpp  main.cpp  signalslot.hpp  threaded.hpp  uksf.cpp  uksf.hpp
extensions/uksf/src/modules/data/: data.cpp  data.hpp
extensions/uksf/src/modules/http/: http.cpp  http.hpp
extensions/uksf/src/network/: exception.hpp  router.cpp  router.hpp
extensions/uksf/src/network/routeFactories/: factory.cpp  factory.hpp  resourceNotFound.cpp  resourceNotFound.hpp  serverFactory.cpp  serverFactory.hpp
extensions/uksf/src/network/routeFactories/resources/: abstractResource.cpp  abstractResource.hpp  server.cpp  stop.cpp
extras/: acreSignalModelNames.txt  debug_projectiles.sqf  force.txt  map pbos.txt  maps.txt  scrapeArsenalAccess.py  temp.md
tools/: build.py  build_extension.bat  dependencies.py  deploy.py  deployold.py  extract_aic_rpt.py  fetch_whisper_model.ps1  make.cfg  make.ps1  make.py  makeold.py  playercount.py  setup.bat  setup.py  sqf_linter.py
(+2762 files in other folders)
