[package]
name = "uksf"
version = "0.1.0"
edition = "2024"

[lib]
name = "uksf_x64"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { version = "1.11.15", default-features = false, features = ["extension"] }
crossbeam-channel = "0.5"
tiny_http = "0.12"
ureq = "2"
log = "0.4"

[profile.release]
opt-level = "z"
lto = true
